--- a/Part B.2 - Web App/templates/index.html
+++ b/Part B.2 - Web App/templates/index.html
@@ -102,12 +102,13 @@
         </div>
     </div>
 
-    <footer class="footer bg-light text-center py-3 mt-5">
+    <footer class="footer bg-dark text-center py-3 mt-5">
         <div class="container">
             <p class="mb-1">©2025 Reddit Search Engine</p>
             <p class="mb-1">Developed by: <strong>Shikhar Gelvesh Ranjitha Yukta and Shravya - (GROUP 2)</strong></p>
-            <p class="mb-1">Supervised by: <a href="https://www.cs.ucr.edu/~vagelis/" target="_blank"><strong>Professor Vagelis Hristidis</strong></a></p>
+            <p class="mb-1">Supervised by: <a href="https://www.cs.ucr.edu/~vagelis/" target="_blank"><strong class="animate-slide-up">Professor Vagelis Hristidis</strong></a></p>
             <p class="mb-0">Assisted by: <strong>Jannat Ara Meem</strong></p>
+            <p class="mb-0"><strong>❤️ Grateful to UCR and our professor for an inspiring coursework that made this project possible ❤️</strong></p>
         </div>
     </footer>
 
